--- a/app/src/main/res/layout/activity_f1_section04.xml
+++ b/app/src/main/res/layout/activity_f1_section04.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/rsv_bg"
         android:layoutDirection="rtl"
+        android:animateLayoutChanges="true"
         android:padding="16dp">
 
         <LinearLayout
