--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,13 +8,20 @@
         <item name="android:scrollViewStyle">@style/BackgroundStyle</item>
         <item name="android:textViewStyle">@style/labels</item>
         <item name="android:editTextStyle">@style/textInput</item>
+        <item name="android:radioButtonStyle">@style/radiobutton</item>
         <item name="checkboxStyle">@style/checkbox</item>
+        <item name="buttonStyle">@style/buttons</item>
         <item name="android:textColorHint">@color/colorPrimaryBeta</item>
         <item name="android:typeface">serif</item>
+        <item name="android:fillAfter">true</item>
+        <item name="android:enterFadeDuration">600</item>
+        <item name="android:exitFadeDuration">200</item>
+        <item name="android:animateLayoutChanges">true</item>
         <!-- Customize your theme here. -->
     </style>
 
     <style name="AppTheme1" parent="Theme.AppCompat.NoActionBar">
+        <item name="buttonStyle">@style/buttons</item>
 
         <item name="android:typeface">sans</item>
         <!--        <item name="android:toolbarStyle">@style/ActionBar</item>-->
@@ -47,23 +54,23 @@
 
 
     <!-- Form Styles -->
-    <style name="labels" parent="android:Widget.Material.Light.TextView">
+    <style name="labels" parent="@android:style/TextAppearance.Widget.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:background">@color/colorPrimary</item>
-        <item name="android:padding">5dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">24sp</item>
         <item name="android:typeface">serif</item>
         <item name="android:paddingTop">16dp</item>
         <item name="android:elevation">1dp</item>
         <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
 
 
     </style>
 
-    <style name="HeadingTitle" parent="android:Widget.Material.Light.TextView">
+    <style name="HeadingTitle" parent="@android:style/TextAppearance.Widget.TextView">
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:background">@color/colorSecondary</item>
         <item name="android:gravity">center_horizontal</item>
@@ -108,17 +115,16 @@
         <item name="android:padding">16dp</item>
     </style>
 
-    <style name="textInput" parent="android:Widget.Material.Light.EditText">
+    <style name="textInput" parent="Widget.AppCompat.EditText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">12dp</item>
         <item name="android:layout_marginBottom">4dp</item>
         <item name="android:elevation">1dp</item>
-        <item name="android:background">@color/colorPrimary</item>
-        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColorHint">@color/colorPrimaryBeta</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColorHint">@color/colorAccent</item>
         <item name="android:padding">12dp</item>
         <item name="android:imeOptions">actionDone</item>
         <item name="android:singleLine">true</item>
@@ -167,26 +173,26 @@
 
     </style>
 
-    <style name="radiobutton">
+    <style name="radiobutton" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:textSize">24sp</item>
+
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
-        <item name="android:clickable">true</item>
-        <item name="android:layout_marginBottom">1dp</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:layout_margin">1dp</item>
         <item name="android:background">@color/white</item>
         <item name="android:elevation">1dp</item>
+        <item name="android:radius">2dp</item>
     </style>
 
     <style name="buttons" parent="android:Widget.Material.Light.Button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
+        <item name="android:minHeight">36dp</item>
         <item name="android:textSize">24sp</item>
         <item name="android:typeface">serif</item>
         <item name="android:padding">16dp</item>
         <item name="android:radius">2dp</item>
-        <item name="android:elevation">5dp</item>
+        <item name="android:elevation">1dp</item>
         <item name="android:background">@drawable/background_grad</item>
     </style>
 
