--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -13,6 +13,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:background="@drawable/rsv_bg"
         android:layout_height="wrap_content">
 
         <LinearLayout
