--- a/app/src/main/res/layout/sync_list_adapter.xml
+++ b/app/src/main/res/layout/sync_list_adapter.xml
@@ -19,8 +19,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="37.5dp"
         android:layout_marginBottom="2dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="4dp">
+        android:background="@color/white"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -84,6 +85,7 @@
                     android:layout_marginLeft="17.50dp"
                     android:layout_marginRight="17.50dp"
                     android:layout_marginBottom="17.50dp"
+
                     tools:text="Results:    " />
             </LinearLayout>
         </LinearLayout>
