--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -279,6 +279,69 @@
 
                     </android.support.v7.widget.CardView>
 
+                    <!--RS13 - Date Picker-->
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/RS22cv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:text="@string/RS13"
+                                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
+                                android:id="@+id/RS13"
+                                style="@style/textInput"
+                                android:layout_marginStart="20dp"
+                                android:layout_weight="70"
+                                android:focusable="false"
+                                android:hint="DD/MM/YYYY"
+                                android:textColor="@android:color/black"
+                                app:dateFormat="dd-MM-yyyy"
+                                app:maxDate="CR_DATE" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                    <!--RS14-->
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/RS14cv"
+                        style="@style/cardView">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:text="@string/RS14"
+                                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                            <EditText
+                                android:id="@+id/RS14"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:digits="@string/ed_sentence"
+                                android:hint="@string/RS14"
+                                android:inputType="textShortMessage" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+
+
                     <LinearLayout
                         android:id="@+id/navbuttons"
                         android:layout_width="match_parent"
