--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -87,7 +87,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <!--RS7-->
                     <android.support.v7.widget.CardView style="@style/cardView">
@@ -334,6 +335,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:digits="@string/ed_sentence"
+                                android:enabled="false"
                                 android:hint="@string/RS14"
                                 android:inputType="textShortMessage" />
 
