--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -280,68 +280,77 @@
 
                     </android.support.v7.widget.CardView>
 
-                    <!--RS13 - Date Picker-->
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/RS22cv"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                        <!--RS13 - Date Picker-->
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/RS22cv"
+                            style="@style/cardView"
+                            android:layout_weight="1">
 
-                            <TextView
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:text="@string/RS13"
-                                android:textAppearance="?android:attr/textAppearanceLarge" />
+                                android:orientation="vertical">
 
-                            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
-                                android:id="@+id/RS13"
-                                style="@style/textInput"
-                                android:layout_marginStart="20dp"
-                                android:layout_weight="70"
-                                android:focusable="false"
-                                android:hint="DD/MM/YYYY"
-                                android:textColor="@android:color/black"
-                                app:dateFormat="dd-MM-yyyy"
-                                app:maxDate="CR_DATE" />
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:text="@string/RS13"
+                                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                        </LinearLayout>
+                                <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
+                                    android:id="@+id/RS13"
+                                    style="@style/textInput"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_weight="70"
+                                    android:focusable="false"
+                                    android:hint="DD/MM/YYYY"
+                                    android:textColor="@android:color/black"
+                                    app:dateFormat="dd-MM-yyyy"
+                                    app:maxDate="CR_DATE" />
 
-                    </android.support.v7.widget.CardView>
+                            </LinearLayout>
 
-                    <!--RS14-->
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/RS14cv"
-                        style="@style/cardView">
+                        </android.support.v7.widget.CardView>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                        <!--RS14-->
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/RS14cv"
+                            style="@style/cardView"
+                            android:layout_weight="1">
 
-                            <TextView
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:text="@string/RS14"
-                                android:textAppearance="?android:attr/textAppearanceLarge" />
+                                android:orientation="vertical">
 
-                            <EditText
-                                android:id="@+id/RS14"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:digits="@string/ed_sentence"
-                                android:enabled="false"
-                                android:hint="@string/RS14"
-                                android:inputType="textShortMessage" />
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:text="@string/RS14"
+                                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                        </LinearLayout>
+                                <EditText
+                                    android:id="@+id/RS14"
+                                    style="@style/textInput"
+                                    android:digits="@string/ed_sentence"
+                                    android:enabled="false"
+                                    android:hint="@string/RS14"
+                                    android:inputType="textShortMessage"
+                                    android:textAlignment="center"
+                                    android:textStyle="bold" />
 
-                    </android.support.v7.widget.CardView>
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                    </LinearLayout>
 
 
                     <LinearLayout
