--- a/app/src/main/res/layout/activity_f1_section02.xml
+++ b/app/src/main/res/layout/activity_f1_section02.xml
@@ -370,8 +370,7 @@
                     android:text="@string/nextSection"
                     android:textColor="@color/white"
                     android:textSize="24sp"
-                    android:textStyle="bold"
-                    android:visibility='@{RS17b.checked ? View.GONE : View.VISIBLE }' />
+                    android:textStyle="bold" />
 
                 <Button
                     android:id="@+id/btnEnd"
