--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -384,8 +384,7 @@
                             android:text="@string/end_interview"
                             android:textColor="@color/white"
                             android:textSize="24sp"
-                            android:textStyle="bold"
-                            android:visibility="gone" />
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
