--- a/app/src/main/res/layout/activity_f1_section03.xml
+++ b/app/src/main/res/layout/activity_f1_section03.xml
@@ -46,7 +46,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layoutDirection="ltr">
+                        android:layoutDirection="rtl">
 
                         <TextView
                             android:layout_width="match_parent"
