option added 2.04 & text replaced section5

--- a/app/src/main/res/layout/activity_f1_section02.xml
+++ b/app/src/main/res/layout/activity_f1_section02.xml
@@ -256,6 +256,11 @@
                             android:text="@string/RS20d" />
 
                         <RadioButton
+                            android:id="@+id/RS20e"
+                            style="@style/radiobutton"
+                            android:text="@string/RS20e" />
+
+                        <RadioButton
                             android:id="@+id/RS2096"
                             style="@style/radiobutton"
                             android:text="@string/RS2096" />
