--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -111,35 +111,15 @@
                 android:inputType="textShortMessage"
                 android:visibility="gone" />
 
-            <!--RS82 - Date Picker-->
-            <android.support.v7.widget.CardView
-                android:id="@+id/RS82cv"
-                style="@style/cardView">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="@string/RS82"
-                        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                    <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
-                        android:id="@+id/RS82"
-                        style="@style/textInput"
-                        android:focusable="false"
-                        android:hint="DD/MM/YYYY"
-                        android:textColor="@android:color/black"
-                        app:dateFormat="dd-MM-yyyy"
-                        app:minDate="CR_DATE" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
+            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
+                android:id="@+id/RS82"
+                style="@style/textInput"
+                android:focusable="false"
+                android:hint="@string/RS82"
+                android:textColor="@android:color/black"
+                android:visibility="gone"
+                app:dateFormat="dd-MM-yyyy"
+                app:minDate="CR_DATE" />
 
             <Button
                 android:id="@+id/btn_End"
