--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -1,140 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="edu.aku.hassannaqvi.rsvstudy.ui.other.EndingActivity">
+    tools:context=".ui.other.EndingActivity">
+
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="callback"
+            type="edu.aku.hassannaqvi.rsvstudy.ui.other.EndingActivity" />
+
+    </data>
 
 
     <ScrollView
-        android:id="@+id/scrollView01"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:background="@drawable/rsv_bg"
         android:layoutDirection="rtl"
-        android:scrollbars="horizontal">
+        android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layoutDirection="rtl"
             android:orientation="vertical">
 
             <TextView
+                style="@style/HeadingTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:text="@string/dcstatus"
-                android:layout_gravity="center_horizontal"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:text="@string/dcstatus" />
 
-            <RadioGroup
-                android:id="@+id/istatus"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <RadioButton
-                    android:id="@+id/istatus1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/istatus1"
-                    android:textSize="25sp" />
-
-                <RadioButton
-                    android:id="@+id/istatus2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/istatus2"
-                    android:textSize="25sp" />
-
-                <RadioButton
-                    android:id="@+id/istatus3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/istatus3"
-                    android:textSize="25sp" />
-
-                <RadioButton
-                    android:id="@+id/istatus4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/istatus4"
-                    android:textSize="25sp" />
-
-                <RadioButton
-                    android:id="@+id/istatus5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/istatus5"
-                    android:textSize="25sp" />
-
-                <RadioButton
-                    android:id="@+id/istatus6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/istatus6"
-                    android:textSize="25sp" />
-
-                <RadioButton
-                    android:id="@+id/istatus7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/istatus7"
-                    android:textSize="25sp" />
-
-                <RadioButton
-                    android:id="@+id/istatus8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/uother"
-                    android:textSize="25sp" />
-
-            </RadioGroup>
-
-            <EditText
-                android:id="@+id/istatus888x"
-                android:layout_marginBottom="1dp"
-                android:hint="@string/specify"
+            <LinearLayout
+                android:id="@+id/llend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:digits="@string/ed_sentence"
-                android:inputType="textShortMessage"
-                android:visibility="gone" />
+                android:orientation="vertical">
 
-            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
-                android:id="@+id/RS82"
-                style="@style/textInput"
-                android:focusable="false"
-                android:hint="@string/RS82"
-                android:textColor="@android:color/black"
-                android:visibility="gone"
-                app:dateFormat="dd-MM-yyyy"
-                app:minDate="CR_DATE" />
+                <!--RS9-->
+                <android.support.v7.widget.CardView
+                    android:id="@+id/RS9cv"
+                    style="@style/cardView">
 
-            <Button
-                android:id="@+id/btn_End"
+                    <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/dcstatus" />
+
+                        <RadioGroup
+                            android:id="@+id/istatus"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <RadioButton
+                                android:id="@+id/istatus1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:text="@string/istatus1"
+                                android:textSize="25sp" />
+
+                            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
+                                android:id="@+id/RS82"
+                                style="@style/textInput"
+                                android:focusable="false"
+                                android:hint="@string/RS82"
+                                android:text='@{istatus1.checked? RS82.getText().toString() : "" }'
+                                android:textColor="@android:color/black"
+                                android:visibility='@{istatus1.checked? View.VISIBLE : View.GONE}'
+                                app:dateFormat="dd-MM-yyyy"
+                                app:minDate="CR_DATE" />
+
+                            <RadioButton
+                                android:id="@+id/istatus2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:text="@string/istatus2"
+                                android:textSize="25sp" />
+
+                            <RadioButton
+                                android:id="@+id/istatus3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:text="@string/istatus3"
+                                android:textSize="25sp" />
+
+                            <RadioButton
+                                android:id="@+id/istatus4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:text="@string/istatus4"
+                                android:textSize="25sp" />
+
+                            <RadioButton
+                                android:id="@+id/istatus5"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:text="@string/istatus5"
+                                android:textSize="25sp" />
+
+                            <RadioButton
+                                android:id="@+id/istatus6"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:text="@string/istatus6"
+                                android:textSize="25sp" />
+
+                            <RadioButton
+                                android:id="@+id/istatus7"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:text="@string/istatus7"
+                                android:textSize="25sp" />
+
+                            <RadioButton
+                                android:id="@+id/istatus8"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:text="@string/uother"
+                                android:textSize="25sp" />
+
+                            <EditText
+                                android:id="@+id/istatus888x"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
+                                android:digits="@string/ed_sentence"
+                                android:hint="@string/specify"
+                                android:inputType="textShortMessage"
+                                android:text='@{istatus8.checked? istatus888x.getText().toString() : "" }'
+                                android:visibility='@{istatus8.checked? View.VISIBLE : View.GONE}' />
+
+                        </RadioGroup>
+
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/navbuttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_weight="1"
-                android:onClick="endInterview"
-                android:text="@string/end_interview"
-                android:textColor="#ff1e1e"
-                android:textSize="30dp" />
+                android:layout_gravity="end"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_Continue"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4sp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light"
+                    android:onClick='@{() -> callback.BtnContinue()}'
+                    android:text="@string/end_interview"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
     </ScrollView>
 
-</RelativeLayout>
+</layout>
