--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -280,6 +280,39 @@
 
                     </android.support.v7.widget.CardView>
 
+                    <!--RS15-->
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/RS15cv"
+                        style="@style/cardView">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:text="@string/RS15"
+                                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
+                                android:id="@+id/RS15"
+                                style="@style/textInput"
+                                android:layout_marginStart="20dp"
+                                android:layout_weight="70"
+                                android:focusable="false"
+                                android:hint="DD/MM/YYYY"
+                                android:textColor="@android:color/black"
+                                app:dateFormat="dd-MM-yyyy"
+                                app:maxDate="CR_DATE" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -303,16 +336,13 @@
                                     android:text="@string/RS13"
                                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                                <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
+                                <EditText
                                     android:id="@+id/RS13"
                                     style="@style/textInput"
                                     android:layout_marginStart="20dp"
                                     android:layout_weight="70"
-                                    android:focusable="false"
                                     android:hint="DD/MM/YYYY"
-                                    android:textColor="@android:color/black"
-                                    app:dateFormat="dd-MM-yyyy"
-                                    app:maxDate="CR_DATE" />
+                                    android:textColor="@android:color/black" />
 
                             </LinearLayout>
 
