--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -96,7 +96,37 @@
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
+                <!--RS15-->
+                <android.support.v7.widget.CardView
+                    android:id="@+id/RS15cv"
+                    style="@style/cardView">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="@string/RS15"
+                            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                        <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
+                            android:id="@+id/RS15"
+                            style="@style/textInput"
+                            android:layout_marginStart="20dp"
+                            android:layout_weight="70"
+                            android:focusable="false"
+                            android:hint="DD/MM/YYYY"
+                            android:textColor="@android:color/black"
+                            app:dateFormat="dd-MM-yyyy"
+                            app:maxDate="CR_DATE" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
 
                 <Button
                     android:id="@+id/checkBtn"
@@ -133,8 +163,10 @@
                                 android:text="@string/RS7"
                                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                            <EditText
+                            <TextView
                                 android:id="@+id/RS7"
+                                style="@style/TestDisabled"
+
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="dssid" />
@@ -171,8 +203,10 @@
                                 android:text="@string/RS8"
                                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                            <EditText
+                            <TextView
                                 android:id="@+id/RS8"
+                                style="@style/TestDisabled"
+
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="dssid" />
@@ -210,10 +244,12 @@
                                 android:text="@string/RS10"
                                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                            <EditText
+                            <TextView
                                 android:id="@+id/RS10"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                style="@style/TestDisabled"
+
                                 android:digits="@string/ed_sentence"
                                 android:hint="@string/RS10"
                                 android:inputType="textShortMessage" />
@@ -239,10 +275,12 @@
                                 android:text="@string/RS11"
                                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                            <EditText
+                            <TextView
                                 android:id="@+id/RS11"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                style="@style/TestDisabled"
+
                                 android:digits="@string/ed_sentence"
                                 android:hint="@string/RS11"
                                 android:inputType="textShortMessage" />
@@ -268,10 +306,11 @@
                                 android:text="@string/RS12"
                                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                            <EditText
+                            <TextView
                                 android:id="@+id/RS12"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                style="@style/TestDisabled"
                                 android:digits="@string/ed_sentence"
                                 android:hint="@string/RS12"
                                 android:inputType="textShortMessage" />
@@ -280,37 +319,7 @@
 
                     </android.support.v7.widget.CardView>
 
-                    <!--RS15-->
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/RS15cv"
-                        style="@style/cardView">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:text="@string/RS15"
-                                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
-                                android:id="@+id/RS15"
-                                style="@style/textInput"
-                                android:layout_marginStart="20dp"
-                                android:layout_weight="70"
-                                android:focusable="false"
-                                android:hint="DD/MM/YYYY"
-                                android:textColor="@android:color/black"
-                                app:dateFormat="dd-MM-yyyy"
-                                app:maxDate="CR_DATE" />
-
-                        </LinearLayout>
-
-                    </android.support.v7.widget.CardView>
 
 
                     <LinearLayout
